--- a/titan/po/it/LC_MESSAGES/titan.po
+++ b/titan/po/it/LC_MESSAGES/titan.po
@@ -99,12 +99,12 @@ msgid "a"
 msgstr "a"
 msgid "A"
 msgstr "A"
-msgid "AAF Infos"
-msgstr "Informazioni AAF"
-msgid "AAF Panel"
-msgstr "Pannello AAF"
-msgid "AAF Wizard"
-msgstr "AAF Wizard"
+msgid "Infos"
+msgstr "Informazioni"
+msgid "Panel"
+msgstr "Pannello"
+msgid "Wizard"
+msgstr "Wizard"
 msgid "About"
 msgstr "Informazioni"
 msgid "AC3 default"
@@ -967,4 +967,3 @@ msgid "z"
 msgstr "z"
 msgid "Z"
 msgstr "Z"
- 
