--- a/titan/po/ru/LC_MESSAGES/titan.po
+++ b/titan/po/ru/LC_MESSAGES/titan.po
@@ -8,9 +8,9 @@ msgid "500rpm" msgstr "500 о/мин"
 msgid "a" msgstr "a"
 msgid "A" msgstr "A"
 msgid "A/V Settings" msgstr "A/V Настройки"
-msgid "AAF Infos" msgstr "AAF инфо"
-msgid "AAF Panel" msgstr "AAF панель"
-msgid "AAF Wizard" msgstr "AAF ассистент настройки"
+msgid "Infos" msgstr "инфо"
+msgid "Panel" msgstr "панель"
+msgid "Wizard" msgstr "ассистент настройки"
 msgid "About" msgstr "Инфо о"
 msgid "AC3 default" msgstr "AC3 по умолчанию"
 msgid "AC3 Mode" msgstr "AC3 режим"
