--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -557,6 +557,10 @@ msgid "Diseqc Settings"
 
 msgstr "DiSEqC Einstellungen"
 
+msgid "DiSEqC Sat Settings"
+
+msgstr "DiSEqC Satellite Einstellungen"
+
 msgid "DiSEqC"
 
 msgstr "DiSEqC"
@@ -680,6 +684,10 @@ msgstr "Erweiterungsmenü"
 msgid "Extensions"
 
 msgstr "Erweiterungen"
+
+msgid "Expert Sat Settings"
+
+msgstr "Experten Satellite Einstellung"
 
 msgid "f"
 
@@ -880,6 +888,10 @@ msgstr "Dateisysten prüfen- angeschl. Geräte"
 msgid "Harddisk"
 
 msgstr "Festplatte"
+
+msgid "HDD not configured\ncan't find record path"
+
+msgstr "Festplatte nicht eingerichtet, kein Aufnahmepfad vorhanden !\nBitte Festplatte einrichten."
 
 msgid "hddreplacement"
 
@@ -1886,6 +1898,10 @@ msgid "Sat Finder"
 msgstr "Satellitenfinder"
 
 msgid "SAT"
+
+msgstr "Single Satelite"
+
+msgid "Einzelner Satellite"
 
 msgstr "Satelliten"
 
