--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -42,9 +42,9 @@ msgid "A/V Settings"
 
 msgstr "Bild / Ton Einstellen"
 
-msgid "AAF Beta Config"
+msgid "Beta Config"
 
-msgstr "AAF Beta Einstellen"
+msgstr "Beta Einstellen"
 
 msgid "Panel"
 
