--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -435,7 +435,7 @@ msgstr "Committed command"
 
 msgid "Common Interface"
 
-msgstr "CI Steckkarten (Module)"
+msgstr "CI Module"
 
 msgid "Contrast"
 
@@ -1705,6 +1705,10 @@ msgid "Realy Delete ?"
 
 msgstr "wirklich lÃ¶schen?"
 
+msgid "Realy restore default settings ?"
+
+msgstr "auf Werkseinstellung zurücksetzen"
+
 msgid "Record / Timeshift / Stream"
 
 msgstr "Aufnahme / Timeshift / Stream"
@@ -1760,6 +1764,10 @@ msgstr "Repeat-Ein"
 msgid "RESET"
 
 msgstr "Reset"
+
+msgid "Restore default settings"
+
+msgstr "Werkseinstellung"
 
 msgid "RESTORE ERROR"
 
