[titan] update german po file

--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -21,7 +21,7 @@ msgstr "Es muss eine Festplatte oder ein USB-Stick eingebunden sein"
 msgid "A/V Settings"
 msgstr "Bild / Ton Einstellen"
 msgid "Panel"
-msgstr "Panel"
+msgstr "Atemio Panel"
 msgid "Wizard"
 msgstr "Setup-Assistent"
 msgid "Aborting restoring..."
@@ -31,11 +31,11 @@ msgstr "Die Datensicherung wird beendet!"
 msgid "About"
 msgstr "Über"
 msgid "AC3 default"
-msgstr "AC3 standardmäßig"
+msgstr "Dolby Digital (AC3) standardmäßig"
 msgid "AC3 downmix"
-msgstr "AC3 downmix"
+msgstr "Dolby Digital (AC3) downmix"
 msgid "AC3 Mode"
-msgstr "AC3 Modus"
+msgstr "Dolby Digital (AC3) Modus"
 msgid "Action after"
 msgstr "Aktion danach"
 msgid "Activate"
@@ -357,7 +357,7 @@ msgstr "Schneller Titan neustart"
 msgid "Fastzap"
 msgstr "Schnelles Umschalten"
 msgid "Fav"
-msgstr "Bouquets"
+msgstr "Favoriten"
 msgid "FEC"
 msgstr "FEC"
 msgid "FEC:"
@@ -424,6 +424,12 @@ msgid "gateway"
 msgstr "Gateway"
 msgid "Germany"
 msgstr "Deutschland"
+msgid "Graphic EPG"
+msgstr "Graf-Multi-EPG"
+msgid "Graphic EPG Zoom"
+msgstr "Grafisches Multi-EPG Zoom Faktor"
+msgid "Graphic EPG Picon"
+msgstr "Grafisches Multi-EPG Vorschaubilder"
 msgid "Greek"
 msgstr "Griechisch"
 msgid "German"
@@ -433,7 +439,7 @@ msgstr "h"
 msgid "H"
 msgstr "H"
 msgid "Hangtime"
-msgstr "Hangtime"
+msgstr "überlastungs Warnmelnung erscheint (sek)"
 msgid "Harddisk Format - List Devices"
 msgstr "Festplatte formatieren - angeschl. Geräte"
 msgid "Harddisk Fsck - List Devices"
@@ -578,6 +584,8 @@ msgid "MC VideoPlayer View Settings"
 msgstr "MC VideoPlayer Einstellungen anzeigen"
 msgid "Media Center"
 msgstr "Media Center"
+msgid "Media Player"
+msgstr "Medien Abspielen"
 msgid "Memory"
 msgstr "Speicher"
 msgid "Menu Protect"
@@ -609,7 +617,9 @@ msgstr "Ordner für Filme"
 msgid "MTD"
 msgstr "MTD"
 msgid "Multi EPG"
-msgstr "Multi EPG"
+msgstr "Multi-EPG"
+msgstr "Multi (EPG)"
+msgid "Multi (EPG)"
 msgid "MULTI EPG - All Channels"
 msgstr "MULTI EPG - Alle Sender"
 msgid "mvid"
@@ -771,7 +781,7 @@ msgstr "PLL1 ndiv mdiv"
 msgid "Plugins"
 msgstr "Zusatzprogramme"
 msgid "plugload"
-msgstr "PlugIn laden"
+msgstr "Plugin laden"
 msgid "PMT PID:"
 msgstr "PMT PID:"
 msgid "Polarization"
@@ -779,12 +789,14 @@ msgstr "Polarisation"
 msgid "Polarization:"
 msgstr "Polarisation:"
 msgid "Policy"
-msgstr "Regelwerk"
+msgstr "Bild Einstellung"
 msgid "Polish"
 msgstr "Polnisch"
 msgid "portmap"
 msgstr "Port Weiterleitung"
 msgid "Power action"
+msgstr "Aktion bei Druck der Powertaste"
+msgid "Power aktion"
 msgstr "Aktion bei Druck der Powertaste"
 msgid "Power Off Timer"
 msgstr "Ausschalttimer"
@@ -813,7 +825,7 @@ msgstr "Sender mit Pin schützen"
 msgid "protocol"
 msgstr "Protokoll"
 msgid "Prov"
-msgstr "Provider"
+msgstr "Anbieter"
 msgid "Provider:"
 msgstr "Provider:"
 msgid "proxyauth"
@@ -861,7 +873,7 @@ msgstr "Nachlaufzeit (min)"
 msgid "Record Path"
 msgstr "Ordner für Aufnahme"
 msgid "Record Split Size"
-msgstr "Split Größe für Aufnahmen"
+msgstr "Teile Aufnahmen ab einer Größe von"
 msgid "Record Timer"
 msgstr "Aufnahme Timer"
 msgid "Records and EPG ..."
@@ -872,6 +884,8 @@ msgid "record_split_size"
 msgstr "Größe der geteilten Dateien"
 msgid "record_split_type"
 msgstr "Typ der Aufnahmeteilung"
+msgid "Records"
+msgstr "Aufnahmen"
 msgid "Red Button"
 msgstr "Rote Taste"
 msgid "Reduce Standby frequency"
@@ -965,6 +979,8 @@ msgstr "Satellitenfinder"
 msgid "SAT"
 msgstr "Single Satelite"
 msgid "Einzelner Satellite"
+msgstr "Single (EPG)"
+msgid "Einfach (EPG)"
 msgstr "Satelliten"
 msgid "Satellite"
 msgstr "Satellit"
@@ -1016,6 +1032,8 @@ msgid "Select backup:"
 msgstr "Wiederherstellung auswählen"
 msgid "Select Path"
 msgstr "Pfadauswahl"
+msgid "SELECT"
+msgstr "Markieren"
 msgid "Service"
 msgstr "Sender"
 msgid "Serviceinfo"
@@ -1052,8 +1070,10 @@ msgid "SID:"
 msgstr "SID"
 msgid "Signal:"
 msgstr "Signal:"
+msgid "Single Satelite"
+msgstr "Einzelne Sat"
 msgid "Single EPG"
-msgstr "Single EPG"
+msgstr "Einfach-EPG"
 msgid "size"
 msgstr "Größe"
 msgid "Skin Adjust"
@@ -1111,7 +1131,7 @@ msgstr "Eingestellte CPU Frequenz im Standby"
 msgid "standby_overclock"
 msgstr "Übertakten im Standby"
 msgid "Start HTTPD"
-msgstr "Starte HTTPD"
+msgstr "Starte Webserver"
 msgid "Start"
 msgstr "Anfang"
 msgid "start QtBrowser now ?"
@@ -1327,7 +1347,7 @@ msgstr "Bild Einstellungen"
 msgid "View"
 msgstr "Zeige"
 msgid "Virtualzap Timeout"
-msgstr "Virtualzap Timeout"
+msgstr "Virtuelles Umschalten"
 msgid "VLC Player"
 msgstr "VLC Player"
 msgid "Voltage Mode"
