--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -98,6 +98,8 @@ msgid "Audio/Subt."
 msgstr "Ton/Untertitel"
 msgid "Auto resolution"
 msgstr "Automatische Auflösung"
+msgid "Auto Resolution"
+msgstr "Automatische Auflösung"
 msgid "Automatic Search"
 msgstr "Automatische Sendersuche"
 msgid "Automount"
@@ -334,6 +336,8 @@ msgid "Exit"
 msgstr "Exit"
 msgid "Exit = abort restore"
 msgstr "Exit = Wiederherstellung beenden"
+msgid "Extensions List"
+msgstr "Erweiterungens Liste"
 msgid "Extensions Menu"
 msgstr "Erweiterungsmenü"
 msgid "Extensions"
@@ -426,6 +430,8 @@ msgid "Germany"
 msgstr "Deutschland"
 msgid "Graphic EPG"
 msgstr "Graf-Multi-EPG"
+msgid "Graphic MULTI EPG - Bouquets -"
+msgstr "Grafisches Multi-EPG - Favoriten -"
 msgid "Graphic EPG Zoom"
 msgstr "Grafisches Multi-EPG Zoom Faktor"
 msgid "Graphic EPG Picon"
@@ -501,7 +507,7 @@ msgstr "Info zur IPK installation"
 msgid "Ipk Install - select file"
 msgstr "IPK installieren - Datei wählen"
 msgid "IPK install (online)"
-msgstr "IPK online installieren"
+msgstr "IPK installieren (internet)"
 msgid "IPK remove"
 msgstr "IPK löschen"
 msgid "Ipk Remove Info"
@@ -1090,6 +1096,8 @@ msgid "Skip 4/6"
 msgstr "Sprungzeit auf den Tasten 4+6 in Sekunden"
 msgid "Skip 7/9"
 msgstr "Sprungzeit auf den Tasten 7+9 in Sekunden"
+msgid "Sleep Timer"
+msgstr "Ausschalt Timer"
 msgid "small"
 msgstr "klein"
 msgid "SNR:"
