--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -1104,7 +1104,7 @@ msgid "SNR:"
 msgstr "SNR:"
 msgid "Softcam Panel"
 msgstr "Softcam Einstellungen"
-msgid "Softcam selection"
+msgid "Softcam selection:"
 msgstr "Softcam auswählen:"
 msgid "Sort"
 msgstr "Sortieren"
