--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -884,6 +884,8 @@ msgid "Record Timer"
 msgstr "Aufnahme Timer"
 msgid "Records and EPG ..."
 msgstr "Aufnahme und EPG"
+msgid "Records and EPG"
+msgstr "Aufnahme und EPG"
 msgid "record_max_sectors"
 msgstr "Max. Aufnahme Sektoren"
 msgid "record_split_size"
