--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -243,7 +243,7 @@ msgstr "Stoppen"
 msgid "debug"
 msgstr "Debug"
 msgid "default"
-msgstr "Default Infos"
+msgstr "Standard Informationen"
 msgid "Default"
 msgstr "Voreinstellung"
 msgid "DEFAULT"
@@ -615,7 +615,7 @@ msgstr "Module"
 msgid "Monday"
 msgstr "Montag"
 msgid "Mounts"
-msgstr "Mounts"
+msgstr "Geräteanbindungen"
 msgid "move service"
 msgstr "Sender verschieben"
 msgid "Moviepath"
