--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -243,7 +243,7 @@ msgstr "Stoppen"
 msgid "debug"
 msgstr "Debug"
 msgid "default"
-msgstr "Standard Informationen"
+msgstr "Datum Uhrzeit"
 msgid "Default"
 msgstr "Voreinstellung"
 msgid "DEFAULT"
