--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -138,6 +138,8 @@ msgid "big"
 msgstr "groß"
 msgid "Blue Button"
 msgstr "Blaue Taste"
+msgid "Blue Key Action - Setup"
+msgstr "Blaue Tastenbelegungs Men"
 msgid "bootlogos"
 msgstr "Bootlogos"
 msgid "bootlogo"
@@ -153,6 +155,8 @@ msgstr "RGB Korrektur beim Start"
 msgid "bootstop"
 msgstr "Startabbruch"
 msgid "Bouquet List"
+msgstr "Favoriten"
+msgid "Bouquets"
 msgstr "Favoriten"
 msgid "Brightness"
 msgstr "Helligkeit"
@@ -337,6 +341,8 @@ msgstr "Exit"
 msgid "Exit = abort restore"
 msgstr "Exit = Wiederherstellung beenden"
 msgid "Extensions List"
+msgstr "Erweiterungens Liste"
+msgid "Extensions List\n"
 msgstr "Erweiterungens Liste"
 msgid "Extensions Menu"
 msgstr "Erweiterungsmenü"
@@ -672,6 +678,10 @@ msgid "No Live Stream running"
 msgstr "Kein Stream aktiv"
 msgid "No"
 msgstr "Nein"
+msgid "no"
+msgstr "Nein"
+msgid "no\n"
+msgstr "Nein"
 msgid "No backup folders found!!!"
 msgstr "Kein Ordner für Datensicherung gefunden"
 msgid "non"
@@ -687,7 +697,9 @@ msgstr "o"
 msgid "O"
 msgstr "O"
 msgid "off"
-msgstr "aus"
+msgstr "Nein"
+msgid "off\n"
+msgstr "Nein"
 msgid "OK"
 msgstr "Ok"
 msgid "OK = start restore"
@@ -700,6 +712,10 @@ msgid "oldvideofw"
 msgstr "Alte Video Firmware"
 msgid "ONID:"
 msgstr "ONID:"
+msgid "on"
+msgstr "Ja"
+msgid "on\n"
+msgstr "Ja"
 msgid "Only free scan"
 msgstr "Nur unverschlüsselte Sender"
 msgid "Only free channel scan"
@@ -816,6 +832,8 @@ msgid "poweroff"
 msgstr "Ausschalten"
 msgid "Prev"
 msgstr "Zurück"
+msgid "press ok"
+msgstr "Drück OK-Taste"
 msgid "profile"
 msgstr "Profil"
 msgid "Program Info"
