[titan] update po

--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -697,9 +697,9 @@ msgstr "o"
 msgid "O"
 msgstr "O"
 msgid "off"
-msgstr "Nein"
+msgstr "aus"
 msgid "off\n"
-msgstr "Nein"
+msgstr "aus"
 msgid "OK"
 msgstr "Ok"
 msgid "OK = start restore"
@@ -713,9 +713,9 @@ msgstr "Alte Video Firmware"
 msgid "ONID:"
 msgstr "ONID:"
 msgid "on"
-msgstr "Ja"
+msgstr "ein"
 msgid "on\n"
-msgstr "Ja"
+msgstr "ein"
 msgid "Only free scan"
 msgstr "Nur unverschlüsselte Sender"
 msgid "Only free channel scan"
