--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -696,6 +696,8 @@ msgid "o"
 msgstr "o"
 msgid "O"
 msgstr "O"
+msgid "Off"
+msgstr "aus"
 msgid "off"
 msgstr "aus"
 msgid "off\n"
@@ -715,6 +717,8 @@ msgstr "ONID:"
 msgid "on"
 msgstr "ein"
 msgid "on\n"
+msgstr "ein"
+msgid "On"
 msgstr "ein"
 msgid "Only free scan"
 msgstr "Nur unverschlüsselte Sender"
@@ -1314,6 +1318,8 @@ msgid "UNC:"
 msgstr "UNC:"
 msgid "Uncommitted Diseqc command"
 msgstr "Fehlerhafter DiSEqC Befehl"
+msgid "undefined"
+msgstr "nicht definiert"
 msgid "Unicable Configuration"
 msgstr "Unicable Einstellen"
 msgid "unknown"
