--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -1350,6 +1350,8 @@ msgid "userauth"
 msgstr "Benutzer Authentifizierung"
 msgid "User"
 msgstr "Benutzer"
+msgid "user defined"
+msgstr "Benutzer definiert"
 msgid "username"
 msgstr "Benutzername"
 msgid "v"
