--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -58,6 +58,8 @@ msgid "Adjust"
 msgstr "System Einstellen"
 msgid "Auto Scan"
 msgstr "automatisch"
+msgid "AUTO"
+msgstr "automatisch"
 msgid "all"
 msgstr "alle"
 msgid "ALL"
@@ -696,6 +698,8 @@ msgid "o"
 msgstr "o"
 msgid "O"
 msgstr "O"
+msgid "OFF"
+msgstr "aus"
 msgid "Off"
 msgstr "aus"
 msgid "off"
@@ -719,6 +723,8 @@ msgstr "ein"
 msgid "on\n"
 msgstr "ein"
 msgid "On"
+msgstr "ein"
+msgid "ON"
 msgstr "ein"
 msgid "Only free scan"
 msgstr "Nur unverschlüsselte Sender"
