--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -270,6 +270,8 @@ msgid "dhcp"
 msgstr "Automatisch (dhcp)"
 msgid "Dirsort"
 msgstr "Ordnersortierung"
+msgid "direct connect"
+msgstr "Direkte Verbindung"
 msgid "disable"
 msgstr "aus"
 msgid "DiSEqC Command Order"
