--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -306,6 +306,8 @@ msgid "E"
 msgstr "E"
 msgid "East / West"
 msgstr "Ost / West"
+msgid "emthy"
+msgstr "lehr"
 msgid "emu"
 msgstr "Emu"
 msgid "emus"
@@ -621,7 +623,11 @@ msgstr "Modulation"
 msgid "Modulation:"
 msgstr "Modulation:"
 msgid "Module"
-msgstr "Module"
+msgstr "Modul"
+msgid "Module Config"
+msgstr "Modul Einstellung"
+msgid "Module Type"
+msgstr "Modul Typ"
 msgid "Monday"
 msgstr "Montag"
 msgid "Mounts"
@@ -638,6 +644,8 @@ msgid "Multi (EPG)"
 msgstr "Multi (EPG)"
 msgid "MULTI EPG - All Channels"
 msgstr "MULTI EPG - Alle Sender"
+msgid "Multiple Service"
+msgstr "mehrere Sender"
 msgid "mvid"
 msgstr "mvid"
 msgid "My Video"
@@ -1017,6 +1025,8 @@ msgstr "Satellitenfinder"
 msgid "SAT"
 msgstr "Single Satelite"
 msgid "Einzelner Satellite"
+msgstr "Single Service"
+msgid "Einzel Sender"
 msgstr "Single (EPG)"
 msgid "Einfach (EPG)"
 msgstr "Satelliten"
