--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -605,6 +605,8 @@ msgstr "Media Center"
 msgid "Media Player"
 msgstr "Medien Abspielen"
 msgid "Memory"
+msgid "MENU"
+msgstr "Menu"
 msgstr "Speicher"
 msgid "Menu Protect"
 msgstr "Menü schützen"
@@ -939,7 +941,7 @@ msgstr "CPU Frequenz im Standby reduzieren"
 msgid "Repeat-On"
 msgstr "Repeat-Ein"
 msgid "RESET"
-msgstr "Reset"
+msgstr "zurücksetzen"
 msgid "Restore default settings"
 msgstr "Werkseinstellung"
 msgid "RESTORE ERROR"
