--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -442,6 +442,8 @@ msgid "Germany"
 msgstr "Deutschland"
 msgid "Graphic EPG"
 msgstr "Graf-Multi-EPG"
+msgid "Graph. EPG"
+msgstr "Graf-Multi-EPG"
 msgid "Graphic MULTI EPG - Bouquets -"
 msgstr "Grafisches Multi-EPG - Favoriten -"
 msgid "Graphic EPG Zoom"
@@ -1025,13 +1027,11 @@ msgstr "Experten Satellit Einstellung"
 msgid "Sat Finder"
 msgstr "Satellitenfinder"
 msgid "SAT"
-msgstr "Single Satelite"
-msgid "Einzelner Satellite"
-msgstr "Single Service"
-msgid "Einzel Sender"
+msgstr "Einzelne Satelliten"
+msgid "Single Service"
+msgstr "Einzel Sender"
 msgstr "Single (EPG)"
-msgid "Einfach (EPG)"
-msgstr "Satelliten"
+msgstr "Einfach (EPG)"
 msgid "Satellite"
 msgstr "Satellit"
 msgid "Satellites"
