--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -607,9 +607,9 @@ msgstr "Media Center"
 msgid "Media Player"
 msgstr "Medien Abspielen"
 msgid "Memory"
+msgstr "Speicher"
 msgid "MENU"
 msgstr "Menu"
-msgstr "Speicher"
 msgid "Menu Protect"
 msgstr "Menü schützen"
 msgid "Menulist"
@@ -1032,7 +1032,7 @@ msgid "SAT"
 msgstr "Einzelne Satelliten"
 msgid "Single Service"
 msgstr "Einzel Sender"
-msgstr "Single (EPG)"
+msgid "Single (EPG)"
 msgstr "Einfach (EPG)"
 msgid "Satellite"
 msgstr "Satellit"
