--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -292,6 +292,8 @@ msgid "dnsserver 1"
 msgstr "DNS-Server 1"
 msgid "dnsserver 2"
 msgstr "DNS-Server 2"
+msgid "Do you really want to erase all datas and backups from Swap ? The Box will reboot and the erase will be started!"
+msgstr "Soll der Swap Speicher für Sicherung und Erweiterungen wirklich gelöscht werden? Die Box wird neu gestartet und dann automatisch Formatiert"
 msgid "Do you really want to start the Wizard? The Box will reboot and the Wizard will be started!"
 msgstr "Soll der Assistent gestartet werden? Die Box wird neu gestartet und der Assistent wird ausgeführt"
 msgid "Don't clear TV on zap (only with fastzap)"
