[titan] fix loop translations

--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -582,6 +582,8 @@ msgid "logto"
 msgstr "Logge in Datei"
 msgid "Longitude"
 msgstr "Längengrad"
+msgid "loop to Tuner"
+msgstr "Verbunden mit Tuner"
 msgid "m"
 msgstr "m"
 msgid "M"
