--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -1120,6 +1120,8 @@ msgid "Signal:"
 msgstr "Signal:"
 msgid "Single Satelite"
 msgstr "Einzelne Sat"
+msgid "Single LNB"
+msgstr "Einzel LNB"
 msgid "Single EPG"
 msgstr "Einfach-EPG"
 msgid "size"
