--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -16,8 +16,6 @@ msgid "a"
 msgstr "a"
 msgid "A"
 msgstr "A"
-msgid "alpha"
-msgstr "Alphabetisch"
 msgid "A record hdd or a swapstick must be mounted!"
 msgstr "Es muss eine Festplatte oder ein USB-Stick eingebunden sein"
 msgid "A/V Settings"
@@ -273,8 +271,7 @@ msgstr "Gerät:"
 msgid "Devices"
 msgstr "Geräte"
 msgid "deaktiv"
-msgid "ausgeschaltet"
-msgstr "Geräte"
+msgstr "ausgeschaltet"
 msgid "dhcp"
 msgstr "Automatisch (dhcp)"
 msgid "Dirsort"
