[titan] some po fixes

--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -235,7 +235,9 @@ msgstr "Festplatte konfigurieren"
 msgid "copy service"
 msgstr "Sender kopieren"
 msgid "CPU"
-msgstr "CPU"
+msgstr "Prozessor"
+msgid "CPU info"
+msgstr "Prozessor Information"
 msgid "CPU frequency"
 msgstr "CPU Frequenz"
 msgid "Create Backup"
@@ -399,9 +401,9 @@ msgstr "Dateilisten Modus"
 msgid "Filesystem Check"
 msgstr "Dateisystem prüfen"
 msgid "Flashupdate (online)"
-msgstr "FLASH Aktualisierung (internet)"
+msgstr "Software Aktualisierung (Internet)"
 msgid "Flashupdate (tmp)"
-msgstr "FLASH Aktualisierung (lokal)"
+msgstr "Software Aktualisierung (Lokal)"
 msgid "fonts"
 msgstr "Schriftarten"
 msgid "Fontsize adjust in pixel"
@@ -419,7 +421,7 @@ msgstr "Gefundene - TV:"
 msgid "French"
 msgstr "Französisch"
 msgid "free space"
-msgstr "Freier Speicher"
+msgstr "Freier Speicherplatz"
 msgid "Frequency"
 msgstr "Frequenz"
 msgid "Frequency:"
@@ -529,11 +531,11 @@ msgstr "IP Adresse"
 msgid "Ipk Install Info"
 msgstr "Info zur IPK installation"
 msgid "Ipk Install - select file"
-msgstr "IPK installieren - Datei wählen"
+msgstr "IPK Pakete installieren - Datei wählen"
 msgid "IPK install (online)"
-msgstr "IPK installieren (internet)"
+msgstr "IPK Pakete installieren (Internet)"
 msgid "IPK remove"
-msgstr "IPK löschen"
+msgstr "IPK Pakete löschen"
 msgid "Ipk Remove Info"
 msgstr "Info zur IPK Deinstallation"
 msgid "IPK tmp (tmp)"
@@ -620,6 +622,8 @@ msgid "Media Player"
 msgstr "Medien Abspielen"
 msgid "Memory"
 msgstr "Speicher"
+msgid "Memory info"
+msgstr "Speicher Information"
 msgid "MENU"
 msgstr "Menu"
 msgid "Menu Protect"
@@ -640,6 +644,8 @@ msgid "Modulation:"
 msgstr "Modulation:"
 msgid "Module"
 msgstr "Modul"
+msgid "Module info"
+msgstr "Modul Informationen"
 msgid "Module Config"
 msgstr "Modul Einstellung"
 msgid "Module Type"
@@ -653,7 +659,9 @@ msgstr "Sender verschieben"
 msgid "Moviepath"
 msgstr "Ordner für Filme"
 msgid "MTD"
-msgstr "MTD"
+msgstr "Flash Aufteilung"
+msgid "MTD"
+msgstr "Flash Aufteilungs Information"
 msgid "Multi EPG"
 msgstr "Multi-EPG"
 msgid "Multi (EPG)"
@@ -911,7 +919,7 @@ msgstr "Radiologos"
 msgid "Radio Player"
 msgstr "Radio Player"
 msgid "Ram"
-msgstr "Ram"
+msgstr "Freier Speicher"
 msgid "Random"
 msgstr "Zufällig"
 msgid "Random-On"
@@ -1247,13 +1255,13 @@ msgstr "Symbolrate"
 msgid "Sysinfo"
 msgstr "Systeminformation"
 msgid "System - Flashupdate (online)"
-msgstr "System - Flashupdate (Internet)"
+msgstr "System - Flash Software Aktualiesierung (Internet)"
 msgid "System - Flashupdate (tmp)"
-msgstr "System - Flashupdate (Lokal)"
+msgstr "System - Flash Software Aktualiesierung (Lokal)"
 msgid "System - Usbupdate (online)"
-msgstr "System - USB-Update (Internet)"
+msgstr "System - USB Software Aktualiesierung (Internet)"
 msgid "System - Usbupdate (tmp)"
-msgstr "System - USB-Update (Lokal)"
+msgstr "System - USB Software Aktualiesierung (Lokal)"
 msgid "System Info"
 msgstr "System Infos"
 msgid "System"
@@ -1371,9 +1379,9 @@ msgstr "Update Liste"
 msgid "Usb Device"
 msgstr "USB Geräte"
 msgid "Usbupdate (online)"
-msgstr "USB Aktualisierung (Internet)"
+msgstr "USB Software Aktualisierung (Internet)"
 msgid "Usbupdate (tmp)"
-msgstr "USB Aktualisierung (Lokal)"
+msgstr "USB Software Aktualisierung (Lokal)"
 msgid "Use EPG Endtime"
 msgstr "Zum Sendungsende"
 msgid "Use Teletxt Workaround"
