--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -660,7 +660,7 @@ msgid "Moviepath"
 msgstr "Ordner für Filme"
 msgid "MTD"
 msgstr "Flash Aufteilung"
-msgid "MTD"
+msgid "MTD info"
 msgstr "Flash Aufteilungs Information"
 msgid "Multi EPG"
 msgstr "Multi-EPG"
