--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -352,6 +352,8 @@ msgid "errorboot"
 msgstr "Errorboot"
 msgid "errorstop"
 msgstr "Errorstop"
+msgid "Erase Swap"
+msgstr "Formatiere Swap Speicher"
 msgid "EXIT"
 msgstr "Exit"
 msgid "Exit"
