--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -361,7 +361,7 @@ msgstr "Exit"
 msgid "Exit = abort restore"
 msgstr "Exit = Wiederherstellung beenden"
 msgid "Extensions List"
-msgstr "Erweiterungensliste"
+msgstr "Erweiterungsliste"
 msgid "Extensions Menu"
 msgstr "Erweiterungsmenü"
 msgid "Extensions"
