--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -1007,7 +1007,7 @@ msgstr "GrÃ¶ÃŸe umgekehrt"
 msgid "rmcrashlog"
 msgstr "Crashlog löschen"
 msgid "rmemthy"
-msgstr "lehre Verzeichnisse löschen"
+msgstr "leere Verzeichnisse löschen"
 msgid "Rolloff"
 msgstr "Abtastfrequenz"
 msgid "Rolloff:"
