--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -453,9 +453,9 @@ msgstr "Gateway"
 msgid "Germany"
 msgstr "Deutschland"
 msgid "Graphic EPG"
-msgstr "Graf-Multi-EPG"
+msgstr "Grafisches-Multi-EPG"
 msgid "Graph. EPG"
-msgstr "Graf-Multi-EPG"
+msgstr "Grafisches-Multi-EPG"
 msgid "Graphic MULTI EPG - Bouquets -"
 msgstr "Grafisches Multi-EPG - Favoriten -"
 msgid "Graphic EPG Zoom"
