--- a/titan/po/de/LC_MESSAGES/titan.po
+++ b/titan/po/de/LC_MESSAGES/titan.po
@@ -459,7 +459,7 @@ msgstr "Grafisches-Multi-EPG"
 msgid "Graphic MULTI EPG - Bouquets -"
 msgstr "Grafisches-Multi-EPG - Favoriten -"
 msgid "Graphic EPG Zoom"
-msgstr "Grafisches Multi-EPG Zoom Faktor"
+msgstr "Grafisches-Multi-EPG Zoom Faktor"
 msgid "Graphic EPG Picon"
 msgstr "Grafisches-Multi-EPG Vorschaubilder"
 msgid "Greek"
