--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -1367,7 +1367,7 @@ msgstr "Fehlerhafter DiSEqC Befehl"
 msgid "undefined"
 msgstr "nicht definiert"
 msgid "Unicable Configuration"
-msgstr "Unicable Einstellen"
+msgstr "Unicable einstellen"
 msgid "unknown"
 msgstr "unbekannt"
 msgid "UNLOAD"
@@ -1389,7 +1389,7 @@ msgstr "Zum Sendungsende"
 msgid "Use Teletxt Workaround"
 msgstr "Workaround für Videotext nutzen"
 msgid "use ssl"
-msgstr "SSL Benutzen"
+msgstr "SSL benutzen"
 msgid "useproxy"
 msgstr "Benutze Proxy"
 msgid "userauth"
