--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -353,7 +353,7 @@ msgstr "Errorboot"
 msgid "errorstop"
 msgstr "Errorstop"
 msgid "Erase Swap"
-msgstr "Formatiere Swap Speicher"
+msgstr "Formatiere Swap-Speicher"
 msgid "EXIT"
 msgstr "Exit"
 msgid "Exit"
@@ -381,7 +381,7 @@ msgstr "Schnelle Textausgabe"
 msgid "fast"
 msgstr "schnell"
 msgid "Faststop"
-msgstr "Schneller Titan Neustart"
+msgstr "Schneller tiTan Neustart"
 msgid "Fastzap"
 msgstr "Schnelles Umschalten"
 msgid "Fav"
@@ -992,8 +992,8 @@ msgid "Restart Network ?"
 msgstr "Netzwerk neu Starten?"
 msgid "Restart Network"
 msgstr "Netzwerk wird neu gestartet"
-msgid "Restart Titan"
-msgstr "Titan neu starten"
+msgid "Restart tiTan"
+msgstr "tiTan neu starten"
 msgid "Restart"
 msgstr "Neustart"
 msgid "Restore"
