--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -301,7 +301,7 @@ msgstr "DNS-Server 1"
 msgid "dnsserver 2"
 msgstr "DNS-Server 2"
 msgid "Do you really want to erase all datas and backups from Swap?\nThe Box will reboot and the erase will be started!"
-msgstr "Sollen alle Swap Daten und Backup gelöscht werden?\nDie Box wird neu gestartet und der Löschvorgang wird ausgefÃ¼hrt"
+msgstr "Swap Daten und Backup löschen?\nBox neu starten und Löschvorgang ausführen "
 msgid "Do you really want to start the Wizard?\nThe Box will reboot and the Wizard will be started!"
 msgstr "Soll der Assistent gestartet werden?\nDie Box wird neu gestartet und der Assistent wird ausgefÃ¼hrt"
 msgid "Don't clear TV on zap (only with fastzap)"
