--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -787,7 +787,7 @@ msgstr "p"
 msgid "P"
 msgstr "P"
 msgid "Press -restore- and your saved settings will be restored from your swapstick / recording hdd! The Box will restart automatically for restoring!\n\nPress -backup- to save your actual settings to swapstick / recording hdd.\nWARNING: The old backup will be deleted!\n\nWhile using the update function of the Panel, your settings will be saved and restored automatically, if possible!"
-msgstr "Drücke -Wiederherstellung- (GrÃ¼n) und deine Daten werden zurÃ¼ckgesichert !\n Deine Atemiobox wird automatisch neugestartet !\n\nDrücke -Sicherung erstellen- (Gelb) dann werden deine Daten gesichert.\nWARNUNG: Die alten Sicherungen werden gelÃ¶scht!\n\nWenn man im Panel - System die Updatefunktionen benutzt werden diese Sicherungen automatisch angelegt !"
+msgstr "Drücke -Wiederherstellung- (GrÃ¼n) und deine Daten werden zurÃ¼ckgesichert !\n Deine Atemiobox wird automatisch neugestartet !\n\nDrücke -Sicherung erstellen- (Gelb) dann werden deine Daten gesichert.\nWARNUNG: Die alten Sicherungen werden gelÃ¶scht!\n\nWenn man im Panel - System die Updatefunktionen benutzt, werden diese Sicherungen automatisch angelegt !"
 msgid "panscan"
 msgstr "Zoom mit Randbeschnitt"
 msgid "password"
