--- a/po/de/LC_MESSAGES/titan.po
+++ b/po/de/LC_MESSAGES/titan.po
@@ -143,7 +143,7 @@ msgstr "groÃŸ"
 msgid "Blue Button"
 msgstr "Blaue Taste"
 msgid "Blue Key Action - Setup"
-msgstr "Blaue Tastenbelegungsmenü"
+msgstr "Blaue-Taste Belegungsmenü"
 msgid "border"
 msgstr "Farbliche Darstellung der Umrandung"
 msgid "bootlogos"
@@ -958,6 +958,8 @@ msgid "Records"
 msgstr "Aufnahmen"
 msgid "Red Button"
 msgstr "Rote Taste"
+msgid "Red Key Action-Setup"
+msgstr "Rote-Taste Belegungsmenü "
 msgid "Reduce Standby frequency"
 msgstr "CPU Frequenz im Standby reduzieren"
 msgid "Repeat-On"
